[gd_scene load_steps=10 format=3 uid="uid://dq3y535cu3tul"]

[ext_resource type="PackedScene" uid="uid://ifmvk8mb5oxe" path="res://world/world_tile_map.tscn" id="1_0ydkr"]
[ext_resource type="Script" path="res://world/level_two.gd" id="1_xu1lg"]
[ext_resource type="PackedScene" uid="uid://dipmmola47rx2" path="res://world/door.tscn" id="4_xqfcu"]
[ext_resource type="Resource" uid="uid://c4ps3nakti51y" path="res://world/one_two.tres" id="5_t6atv"]
[ext_resource type="PackedScene" uid="uid://dn1hm7a2msrr" path="res://enemies/boss_enemy.tscn" id="6_h6m7d"]
[ext_resource type="Resource" uid="uid://blj56ub8bpf12" path="res://world/two_three.tres" id="6_uyb1a"]
[ext_resource type="PackedScene" uid="uid://dwjtvcfq2ep0c" path="res://world/camera_limits.tscn" id="7_76qyh"]
[ext_resource type="PackedScene" uid="uid://ciwvg81toxmqy" path="res://world/brick.tscn" id="8_hj61f"]
[ext_resource type="PackedScene" uid="uid://2e67kkpvjfc3" path="res://world/trigger.tscn" id="9_gpmem"]

[node name="LevelTwo" type="Node2D"]
script = ExtResource("1_xu1lg")

[node name="WorldTileMap" parent="." instance=ExtResource("1_0ydkr")]
layer_0/tile_data = PackedInt32Array(-65514, 65536, 1, -131050, 65536, 0, -65515, 65536, 1, -131051, 65536, 0, -65516, 393216, 1, -131052, 65536, 0, -65517, 65536, 2, -131053, 65536, 0, -65518, 65536, 2, -131054, 65536, 0, -65519, 65536, 2, -131055, 65536, 0, -65520, 65536, 2, -131056, 65536, 0, -65521, 65536, 2, -131057, 65536, 0, -65522, 65536, 2, -131058, 65536, 0, -65523, 65536, 2, -131059, 65536, 0, -65524, 65536, 2, -131060, 65536, 0, -65525, 65536, 2, -131061, 65536, 0, -65526, 65536, 2, -131062, 65536, 0, -65527, 65536, 2, -131063, 65536, 0, -65528, 65536, 2, -131064, 65536, 0, -65529, 65536, 2, -131065, 65536, 0, -65530, 65536, 2, -131066, 65536, 0, -65531, 65536, 2, -131067, 65536, 0, -65532, 65536, 2, -131068, 65536, 0, -65533, 65536, 2, -131069, 65536, 0, -65534, 65536, 2, -131070, 65536, 0, -65535, 327680, 1, -131071, 65536, 0, -65536, 65536, 1, -131072, 65536, 0, 720895, 65536, 2, 655359, 65536, 1, 589823, 65536, 1, 524287, 65536, 1, 458751, 327680, 2, 393215, 131072, 1, 327679, 131072, 1, 262143, 327680, 1, 196607, 65536, 1, 131071, 65536, 1, 65535, 65536, 1, -1, 65536, 1, -65537, 65536, 0, 720894, 0, 2, 655358, 0, 1, 589822, 0, 1, 524286, 0, 1, 458750, 0, 1, 393214, 0, 1, 327678, 0, 1, 262142, 0, 1, 196606, 0, 1, 131070, 0, 1, 65534, 0, 1, -2, 0, 1, -65538, 0, 0, 655361, 65536, 2, 458753, 131072, 1, 393217, 131072, 0, 196609, 131072, 2, 131073, 131072, 1, 65537, 131072, 1, 1, 131072, 1, 655360, 65536, 2, 458752, 65536, 1, 393216, 65536, 0, 196608, 65536, 2, 131072, 65536, 1, 65536, 65536, 1, 0, 65536, 1, 655382, 65536, 2, 655381, 65536, 2, 655380, 65536, 2, 655379, 65536, 2, 655378, 65536, 2, 655377, 65536, 2, 655376, 65536, 2, 655375, 65536, 2, 655374, 65536, 2, 655373, 65536, 2, 655372, 65536, 2, 655371, 65536, 2, 655370, 65536, 2, 655369, 65536, 2, 655368, 65536, 2, 655367, 65536, 2, 655366, 65536, 2, 655365, 65536, 2, 655364, 65536, 2, 655363, 65536, 2, 655362, 65536, 2, 589825, 327680, 2, 524289, 131072, 1, 589824, 65536, 1, 524288, 65536, 1, 589845, 65536, 1, 589844, 393216, 2, 589843, 65536, 0, 589842, 65536, 0, 589841, 65536, 0, 589840, 65536, 0, 589839, 65536, 0, 589838, 65536, 0, 589837, 65536, 0, 589836, 65536, 0, 589835, 65536, 0, 589834, 65536, 0, 589833, 65536, 0, 589832, 65536, 0, 589831, 65536, 0, 589830, 65536, 0, 589829, 65536, 0, 589828, 65536, 0, 589827, 65536, 0, 589826, 65536, 0, 524309, 65536, 1, 458773, 65536, 1, 393237, 65536, 0, 393238, 393216, 2, 196630, 393216, 1, 196629, 65536, 2, 131093, 65536, 1, 65557, 65536, 1, 21, 65536, 1, 22, 65536, 1, 589846, 65536, 1, 524310, 65536, 1, 458774, 65536, 1, 524308, 0, 1, 458772, 0, 1, 393236, 0, 0, 196628, 0, 2, 131092, 0, 1, 65556, 0, 1, 20, 0, 1, 65558, 65536, 1, 131094, 65536, 1, 262166, 0, 1, 327702, 0, 1, 655383, 131072, 2, 589847, 131072, 1, 524311, 131072, 1, 458775, 131072, 1, 393239, 131072, 1, 327703, 131072, 1, 262167, 131072, 1, 196631, 131072, 1, 131095, 131072, 1, 65559, 131072, 1, 23, 131072, 1, -65513, 131072, 1, -131049, 131072, 0)

[node name="Door" parent="." instance=ExtResource("4_xqfcu")]
position = Vector2(8, 96)
new_level_path = "res://world/level_one.tscn"
connection = ExtResource("5_t6atv")

[node name="Door2" parent="." instance=ExtResource("4_xqfcu")]
position = Vector2(344, 96)
new_level_path = "res://world/level_three.tscn"
connection = ExtResource("6_uyb1a")

[node name="CameraLimits" parent="." instance=ExtResource("7_76qyh")]
offset_left = 16.0
offset_top = -16.0
offset_right = 336.0
offset_bottom = 164.0
metadata/_edit_lock_ = true

[node name="BossEnemy" parent="." instance=ExtResource("6_h6m7d")]
z_index = 1
position = Vector2(186, 64)
targets = Array[NodePath]([NodePath("../BossTarget"), NodePath("../BossTarget2"), NodePath("../BossTarget3"), NodePath("../BossTarget4"), NodePath("../BossTarget5")])

[node name="BossTarget" type="Marker2D" parent="."]
position = Vector2(186, 64)

[node name="BossTarget2" type="Marker2D" parent="."]
position = Vector2(288, 64)

[node name="BossTarget3" type="Marker2D" parent="."]
position = Vector2(88, 64)

[node name="BossTarget4" type="Marker2D" parent="."]
position = Vector2(114, 40)

[node name="BossTarget5" type="Marker2D" parent="."]
position = Vector2(258, 40)

[node name="Bricks" type="Node2D" parent="."]
visible = false

[node name="Brick" parent="Bricks" instance=ExtResource("8_hj61f")]
position = Vector2(16, 80)

[node name="Brick2" parent="Bricks" instance=ExtResource("8_hj61f")]
position = Vector2(16, 64)

[node name="Brick3" parent="Bricks" instance=ExtResource("8_hj61f")]
position = Vector2(320, 80)

[node name="Brick4" parent="Bricks" instance=ExtResource("8_hj61f")]
position = Vector2(320, 64)

[node name="BricksTrigger" parent="." instance=ExtResource("9_gpmem")]
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BricksTrigger"]
polygon = PackedVector2Array(32, 56, 48, 64, 48, 96, 32, 104, 32, 112, 56, 112, 56, 48, 32, 48)

[connection signal="tree_exited" from="BossEnemy" to="." method="_on_boss_enemy_tree_exited"]
[connection signal="_entered" from="BricksTrigger" to="." method="_on_bricks_trigger__entered"]
